# EasyCompiler

./: CMakeCache.txt  CMakeLists.txt  EasyCompiler  Makefile  cmake_install.cmake
CompileProcess/: README.md  helloworld  helloworld.i  helloworld.s
demo/: Palindromic_Number.c
include/: cli.h  common.h  compiler.h  error.h  format  lexer.h  parser.h  scanner.h  symbol.h  symtab.h  token.h
src/: cli.cpp  compiler.cpp  error.cpp  lexer.cpp  main.cpp  parser.cpp  scanner.cpp  symbol.cpp  symtab.cpp  token.cpp
